# rust-br-translator

./: Cargo.toml  README.md  dicionario.txt
src/: main.rs
