[package]
name = "rust-br-translator"
version = "0.2.0"
edition = "2021"
description = "Tradutor CLI português-inglês usando API LibreTranslate"
license = "MIT"
repository = "https://github.com/gustavokurtz/rust-br-translator"
homepage = "https://github.com/gustavokurtz/rust-br-translator"
documentation = "https://docs.rs/rust-br-translator"
keywords = ["translator", "cli", "portuguese", "english", "libretranslate"]
categories = ["command-line-utilities", "localization"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }